# mass-assignment-rust

./: .gitignore  Cargo.toml  plot_strong_scaling.py
parallel/: .gitignore  Cargo.toml  plot_strong_scaling.py  plot_weak_scaling.py
parallel/config/: config.toml
parallel/src/: config.rs  coordinates.rs  lib.rs  main.rs  thread_comm.rs
serial/: Cargo.toml
serial/src/: coordinates.rs  main.rs  serial.rs
src/: coordinates.rs  lib.rs
